fix: 修复讲义内 Markdown 图片链接在主页上下文中的渲染路径

--- a/index.html
+++ b/index.html
@@ -608,6 +608,8 @@
                     return res.text();
                 })
                 .then(text => {
+                    // 修正讲义源码中的相对图片路径以适配首页当前的渲染层级
+                    text = text.replace(/\]\(\.\.\/assets\//g, '](./assets/');
                     mdContainer.innerHTML = marked.parse(text);
                 })
                 .catch(err => {
