style: 限制首页面板中讲义插图的最大宽度防止越界撑破

--- a/index.html
+++ b/index.html
@@ -380,6 +380,15 @@
             border-radius: 0 8px 8px 0;
         }
 
+        .md-content img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+            margin: 20px 0;
+            display: block;
+        }
+
         .cta-box {
             text-align: center;
             padding: 60px 20px;
