feat: 新增全局参考文档的专属直连阅读

--- a/index.html
+++ b/index.html
@@ -529,7 +529,10 @@
                     <h3>课后延伸</h3>
                     <p>在本周的课程结束后，推荐同学们通过以下资源深入学习：</p>
                     <ul>
-                        <li><a href="#" style="color:var(--accent)">教学大纲与扩展书目列表</a> (前往 GitHub 根目录下载)</li>
+                        <li><a href="./course-materials/00 开篇词 你为什么应该学好软件工程？.md" target="_blank"
+                                style="color:var(--accent)">00 开篇词：你为什么应该学好软件工程？</a> (Markdown扩展阅读)</li>
+                        <li><a href="./course-materials/01 到底应该怎样理解软件工程？.md" target="_blank"
+                                style="color:var(--accent)">01 到底应该怎样理解软件工程？</a> (Markdown扩展阅读)</li>
                         <li>建议复习课程提供的<strong>课堂实践指导手册</strong>以备课后作业。</li>
                         <li>如有问题可随时在内部教学交流群/讨论区内发起提问。</li>
                     </ul>
